@@ -30,12 +30,10 @@
 
 <h4 data-translation="gameMechanics">Game mechanics</h4>
 <p data-translation="aboutKaiChronicles">
-    Game mechanics written by Toni Bennasar, Timendum, Michael Terry, Javier Fernández-Sanguino, James Koval and Rendall. 
+    Game mechanics written by Toni Bennasar, Timendum, Michael Terry, Javier Fernández-Sanguino, James Koval, Rendall and 
+    Garrett Scott.
     Source code is under MIT license.
-    It contains parts of code taken from 
-    <a href="https://lonewolfadventures.projectaon.org">
-        Lone Wolf Adventures
-    </a>, created by Liquid State Limited.
+    It contains parts of code taken from Lone Wolf Adventures, created by Liquid State Limited.
 </p>
 <p data-translation="webPlay">
     You can play to this game with a web browser at 
@@ -53,10 +51,7 @@
     <ul>
         <li>
             The HTML rendering, books XML processing and Project Aon license HTML 
-            contains code taken from 
-            <a href="https://lonewolfadventures.projectaon.org/">
-                Lone Wolf Adventures
-            </a> by Liquid State Limited
+            contains code taken from Lone Wolf Adventures by Liquid State Limited
         </li>
         <li>
             The Lone Wolf logo and splashes are taken directly, or adapted, from the 
