@@ -62,7 +62,7 @@
     text itself).
 </p>
 
-<h3>I would like the application has the feature X (Night mode, autosave, overwrite games,...)</h3>
+<h3>I would like the application has the feature X (Autosave, overwrite games,...)</h3>
 <p>
     Us too. If you are programmer, and you want to do some improvement, code is at  
     <a class="breakable" href="https://github.com/tonib/kaichronicles">https://github.com/tonib/kaichronicles</a>.
