@@ -63,7 +63,7 @@
     interesados en los errores gramaticales que haya en los mensajes en inglés de la aplicación.
 </p>
 
-<h3>Me gustaría que la aplicación hiciera X (Modo nocturno, auto-guardado de partidas, sobreescribir partidas...)</h3>
+<h3>Me gustaría que la aplicación hiciera X (Auto-guardado de partidas, sobreescribir partidas...)</h3>
 <p>
     A nosotros también. Si eres programador y quieres hacer alguna mejora, el código está en 
     <a class="breakable" href="https://github.com/tonib/kaichronicles">https://github.com/tonib/kaichronicles</a>.
